# simple-face-reconigtion

./: README.md  known_faces.npy  main.py  pyproject.toml
