[tool.poetry]
name = "simple-face-reconigtion"
version = "0.1.0"
description = ""
authors = ["anandafiqri <anandafiqri1403@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"
dlib = "^19.24.4"
face-recognition = "^1.3.0"
pillow = "^10.3.0"
pandas = "^2.2.2"
cmake = "^3.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
